--- a/carto.html
+++ b/carto.html
@@ -7,6 +7,5 @@
 <html>
 	
 
-									<h2>Projet SIG Géomatique Prépa </h2>
-<iframe width="1120" height="630" src="https://macarte.ign.fr/carte-narrative/voir/5cf013afa495e33be85a6f417c416299/materiel_pedagogique_journee_geomatique_CPGE?ifs=medium"frameborder="0" marginheight="0" marginwidth="0"></iframe>
-</html>
+									<h2>Projet SIG Géomatique Intensif - CPGE - exemple </h2>
+<iframe width="1280" height="720" src="https://macarte.ign.fr/carte-narrative/voir/5cf013afa495e33be85a6f417c416299/materiel_pedagogique_journee_geomatique_CPGE?ifs=medium"frameborder="0" marginheight="0" marginwidth="0"></iframe></html>
